--- a/index.html
+++ b/index.html
@@ -267,24 +267,26 @@
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
 <!--                        <img class="mx-auto" src="assets/img/IBA_IPA_NEW.png" alt="" />   Logo_IBA_Group-->
-                        <img class="mx-auto" src="assets/img/Logo_IBA_Group.jpg" alt="" />
+                        <img class="mx-auto" src="assets/img/Logo_IBA_Group.png" alt="IBA Logo" width="250" height="150"/>
                         <p class="lead mb-0">
-                            2583/13 Petržílkova St., Prague 5,
+                            GRMD Project maintained by
                             <br />
-                            158 00, Czech Republic
+                            IBA Group
                         </p>
                     </div>
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-                        <h4 class="text-uppercase mb-4">Our social networks</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                        <h4 class="text-uppercase mb-4">Ready to get started?
+                            Try it now!</h4>
+                        <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">GRMD GitHub project</a>
                     </div>
+                    
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">GRMD Project maintained by
-                            <a href="https://ibagroupit.com/">IBA Group</a>
+                        <h4 class="text-uppercase mb-4">Our social networks
+                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/IBAGroupIT/"><i class="fab fa-fw fa-facebook-f"></i></a>
+                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/ibagroup"><i class="fab fa-fw fa-twitter"></i></a>
+                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/company/iba-group/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         </h4>
                     </div>
                 </div>
