--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#video">Video</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#top">Top</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#blog">Blog</a></li>
                         <li class="nav-item mx-0 mx-lg-1 "><a class="nav-link btn-outline-light py-3 px-0 px-lg-3" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">Try it!</a></li>
                     </ul>
                 </div>
@@ -220,57 +220,53 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
         <!-- Contact Section-->
-        <section class="page-section" id="contact">
+        <section class="page-section" id="blog">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact us</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Our blog</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <h3 class="section-subheading text-center">If you have any questions, suggestions, wishes - do not hesitate, we will answer everyone!</h3>
-
-                <!-- Contact Section Form-->
-                <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                                    <p class="help-block text-danger"></p>
+                <h3 class="section-subheading text-center">Here you can also read the latest mainframe development news</h3>
+                        <div class="row">
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="blog-item">
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/choosing-the-right-first-steps-in-devops-mainframe-transformation/">
+                                        <img class="img-fluid" src="assets/img/mf_article-2.png" alt="" />
+                                    </a>
+                                    <div class="blog-caption">
+                                        <div class="blog-caption-heading">Choosing the Right First Steps in DevOps Mainframe Transformation</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | December 11, 2020 YULIYA VARONINA</div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label>
-                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                                    <p class="help-block text-danger"></p>
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="blog-item">
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/improving-the-initial-mainframe-automation-and-creating-a-two-button-push-process/">
+                                        <img class="img-fluid" src="assets/img/step-1-scaled.png" alt="" />
+                                    </a>
+                                    <div class="blog-caption">
+                                        <div class="blog-caption-heading">Improving the Initial Mainframe Automation and Creating a “Two Button Push” Process</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | December 18, 2020 YULIYA VARONINA</div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label>
-                                    <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                                    <p class="help-block text-danger"></p>
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="blog-item">
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/how-to-select-and-implement-the-right-tools-for-mainframe-devops-transformation/?doing_wp_cron=1611218172.4467830657958984375000">
+                                        <img class="img-fluid" src="assets/img/right-mf-tools.png" alt="" />
+                                    </a>
+                                    <div class="blog-caption">
+                                        <div class="blog-caption-heading">How to Select and Implement the Right Tools for Mainframe DevOps Transformation</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | January 16, 2021 YULIYA VARONINA</div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label>
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <br />
-                            <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                        </form>
+                        </div>
                     </div>
-                </div>
-            </div>
         </section>
 
         <!-- Footer-->
@@ -279,7 +275,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <div class="row">
                     <!-- Footer Location-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
-<!--                        <img class="mx-auto" src="assets/img/IBA_IPA_NEW.png" alt="" />   Logo_IBA_Group-->
                         <img class="mx-auto" src="assets/img/Logo_IBA_Group.png" alt="IBA Logo" width="250" height="150"/>
                         <p class="lead mb-0">
                             GRMD Project maintained by
@@ -293,13 +288,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                             Try it now!</h4>
                         <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">GRMD GitHub project</a>
                     </div>
-                    
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">Our social networks
-                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/IBAGroupIT/"><i class="fab fa-fw fa-facebook-f"></i></a>
-                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/ibagroup"><i class="fab fa-fw fa-twitter"></i></a>
-                                                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/company/iba-group/"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                                                    <a class="networks btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/IBAGroupIT/"><i class="fab fa-fw fa-facebook-f"></i></a>
+                                                    <a class="networks btn btn-outline-light btn-social mx-1" href="https://twitter.com/ibagroup"><i class="fab fa-fw fa-twitter"></i></a>
+                                                    <a class="networks btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/company/iba-group/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                         </h4>
                     </div>
                 </div>
