--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="container">
                 <div class="masthead-heading text-uppercase">Global Repository for Mainframe Developers</div>
                 <div class="masthead-subheading">Repository of standardized mainframe artifacts, templates and scripts</div>
-                <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">GRMD GitHub project</a>
+                <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki" onclick="_gaq.push(['_trackEvent', 'button', 'click', 'Go to github page 1']);">GRMD GitHub project</a>
             </div>
         </header>
         <!-- Icons section-->
