--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Ready to get started?
                             Try it now!</h4>
-                        <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">GRMD GitHub project</a>
+                        <a class="btn btn-xl btn-outline-light 2" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki">GRMD GitHub project</a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
