add new contributor

--- a/index.html
+++ b/index.html
@@ -210,11 +210,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <div class="col-lg-4">
                         <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/top/Valery.png" alt="" />
-                            <h4>Valery Aranouski </h4>
+                            <img class="mx-auto rounded-circle" src="assets/img/top/Darya.jpg" alt="" />
+                            <h4>Darya Alferova</h4>
                             <p class="text-white">Lead Software Engineer</p>
-                            <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/valery-aranouski-b14461ab/"><i class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/darya.alferova.7/"><i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.linkedin.com/in/darya-alferova-58a43a10a/"><i class="fab fa-linkedin-in"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
