--- a/index.html
+++ b/index.html
@@ -255,23 +255,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-lg-4 col-sm-6 mb-4">
                                 <div class="blog-item">
-                                    <a class="blog-link" href="https://ibagroupit.com/insights/choosing-the-right-first-steps-in-devops-mainframe-transformation/">
-                                        <img class="img-fluid" src="assets/img/mf_article-2.png" alt="" />
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/most-popular-options-for-mainframe-devops/">
+                                        <img class="img-fluid" src="assets/img/mf-article-1.png" alt="" />
                                     </a>
                                     <div class="blog-caption">
-                                        <div class="blog-caption-heading">Choosing the Right First Steps in DevOps Mainframe Transformation</div>
-                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | December 11, 2020 YULIYA VARONINA</div>
+                                        <div class="blog-caption-heading">Picking the Right Tools: A Deep Dive Into the Most Popular Options for Mainframe DevOps</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | February 17, 2021 YULIYA VARONINA</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-6 mb-4">
                                 <div class="blog-item">
-                                    <a class="blog-link" href="https://ibagroupit.com/insights/improving-the-initial-mainframe-automation-and-creating-a-two-button-push-process/">
-                                        <img class="img-fluid" src="assets/img/step-1-scaled.png" alt="" />
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/db2-administration-how-to-break-cycle-of-constant-firefighting/">
+                                        <img class="img-fluid" src="assets/img/mf-article-2.png" alt="" />
                                     </a>
                                     <div class="blog-caption">
-                                        <div class="blog-caption-heading">Improving the Initial Mainframe Automation and Creating a “Two Button Push” Process</div>
-                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | December 18, 2020 YULIYA VARONINA</div>
+                                        <div class="blog-caption-heading">Db2 Administration: How to Break Your Cycle of Constant Firefighting and Embrace Proactive Management</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | February 4, 2021 Valery Aranouski</div>
                                     </div>
                                 </div>
                             </div>
