--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <header class="masthead">
             <div class="container">
                 <div class="masthead-heading text-uppercase">Global Repository for Mainframe Developers</div>
-                <div class="masthead-subheading">Repository of standardized mainframe artifacts, templates and scripts</div>
+                <div class="masthead-subheading">Open-source repository of standardized mainframe commands, scenarios, and templates</div>
                 <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki" onclick="_gaq.push(['_trackEvent', 'button', 'click', 'Go to github page 1']);">GRMD GitHub project</a>
             </div>
         </header>
@@ -96,24 +96,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-desktop fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Friendly mainframe</h4>
-                        <p class="text-muted">Anything to make it easier for you to work with mainframes</p>
+                        <h4 class="my-3">Quickly and easily</h4>
+                        <p class="text-muted">Useful information about mainframes and practical tips in one place. Solving common mainframe problems and modernizing the discipline</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-server fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">MF artifacts storage</h4>
-                        <p class="text-muted">Examples of scripts, JCL jobs, commands, work scenarios and others</p>
+                        <h4 class="my-3">Knowledge base</h4>
+                        <p class="text-muted">Explore modern approaches to mainframe administration, bring real-world DevOps practices to your work, and fill your knowledge gaps</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             <i class="fas fa-award fa-stack-1x fa-inverse"></i>
                         </span>
-                        <h4 class="my-3">Standardized approaches</h4>
-                        <p class="text-muted">Verified approaches to the mainframe modernization</p>
+                        <h4 class="my-3">Friendly community</h4>
+                        <p class="text-muted">Share your knowledge with other professionals, help your peers find solutions faster, and don't forget to think about future colleagues</p>
                     </div>
                 </div>
             </div>
@@ -123,7 +123,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="page-section bg-primary text-white mb-0" id="video">
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Essence of the GRMD project</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-white">Quick introduction to our project</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -132,11 +132,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
                 <!-- About Section Content-->
                 <div class="row">
-                    <h3 class="section-subheading text-center text-white">In a short video we will tell you about the key idea of this project. How can it help you and which issues it solves</h3>
+                    <h3 class="section-subheading text-center text-white">Our repository allows you to ask questions, leave comments, and — most important —  find solutions for your mainframe projects</h3>
                 </div>
                 <!-- About Section Button-->
                 <div class="text-center mt-4">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/SPeTIYtn5nM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                     <iframe width="560" height="315" style="width: 560px; height: 315px; border-radius: 16px; overflow: hidden; "  src="https://www.youtube.com/embed/SPeTIYtn5nM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
@@ -151,8 +151,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">Maximum useful MF information in one place</h2>
-                            <p>We try to combine in one place everything that can be useful and make life easier when working with mainframes.</p>
+                            <h2 class="display-4">Convenient format</h2>
+                            <p>You can stop searching through the multitude of notebooks and web tabs for the information you need. Our repository gives you a single home for “all things mainframe”.</p>
                         </div>
                     </div>
                 </div>
@@ -170,7 +170,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
                             <h2 class="display-4">DevOps mainframe approaches</h2>
-                            <p>Various scripts and solutions that can be used in automated CI/CD processes and apply DevOps practices on the mainframes.</p>
+                            <p>Our own solutions to bring automation and DevOps principles to mainframe so that you can modernize your mainframe processes.</p>
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-lg-6">
                         <div class="p-5">
-                            <h2 class="display-4">Let's make the mainframes easier for all!</h2>
+                            <h2 class="display-4">Shareability</h2>
                             <p>Share your best practices and examples, each pull request is valuable to us and the entire mainframe developers community. So let's make it better together!</p>
                         </div>
                     </div>
@@ -205,7 +205,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                         <div class="divider-custom-line"></div>
                     </div>
-                    <h3 class="section-subheading text-center text-white">The rating is set based on the activity and contribution to the development of the repository</h3>
+                    <h3 class="section-subheading text-center text-white">Anyone in the mainframe community can derive value from our repository. We developed this project to solve the unique problems of both junior and experienced mainframe professionals</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
