--- a/index.html
+++ b/index.html
@@ -134,10 +134,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="row">
                     <h3 class="section-subheading text-center text-white">Our repository allows you to ask questions, leave comments, and — most important —  find solutions for your mainframe projects</h3>
                 </div>
-                <!-- About Section Button-->
-                <div class="text-center mt-4">
-                     <iframe width="560" height="315" style="width: 560px; height: 315px; border-radius: 16px; overflow: hidden; "  src="https://www.youtube.com/embed/SPeTIYtn5nM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
+                <!-- About Section Button-->  
+                  <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/SPeTIYtn5nM" allowfullscreen></iframe>
+                  
+
             </div>
         </section>
 
