Add webinar link

--- a/index.html
+++ b/index.html
@@ -256,6 +256,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-lg-4 col-sm-6 mb-4">
                                 <div class="blog-item">
+                                    <a class="blog-link" href="https://event.ibagroupit.com/">
+                                        <img class="img-fluid" src="assets/img/mf-webinar.png" alt="" />
+                                    </a>
+                                    <div class="blog-caption">
+                                        <div class="blog-caption-heading">Mainframe DevOps: We learn from people more than from books</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group | April 22, 2021 Yulia Varonina & Ilya Abnitski</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="blog-item">
                                     <a class="blog-link" href="https://ibagroupit.com/insights/most-popular-options-for-mainframe-devops/">
                                         <img class="img-fluid" src="assets/img/mf-article-1.png" alt="" />
                                     </a>
