Added IBA Online webinar banner

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
     <head>
         <!-- NT -->
         <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -87,8 +87,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a class="btn btn-xl btn-outline-light" href="https://github.com/IBA-mainframe-dev/Global-Repository-for-Mainframe-Developers/wiki" onclick="_gaq.push(['_trackEvent', 'button', 'click', 'Go to github page 1']);">GRMD GitHub project</a>
             </div>
         </header>
+
         <!-- Icons section-->
-        <section class="page-section" id="services">
+    <a href="https://event.ibagroupit.com/">
+        <img src="assets/img/webinar.png" class="ibaevent" alt="" />
+    </a>
+
+    <section class="page-section" id="services">
             <div class="container">
                 <div class="row text-center">
                     <div class="col-md-4">
@@ -137,8 +142,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- About Section Button-->  
                   <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/SPeTIYtn5nM" allowfullscreen></iframe>
-                  
-
+            </div>
             </div>
         </section>
 
@@ -256,34 +260,34 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <div class="row">
                             <div class="col-lg-4 col-sm-6 mb-4">
                                 <div class="blog-item">
-                                    <a class="blog-link" href="https://ibagroupit.com/insights/most-popular-options-for-mainframe-devops/">
-                                        <img class="img-fluid" src="assets/img/mf-article-1.png" alt="" />
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/github-repository-of-mainframe-solutions-part-two/">
+                                        <img class="img-fluid" src="assets/img/mainframe-siloes-1_1-1.png" alt="" />
                                     </a>
                                     <div class="blog-caption">
-                                        <div class="blog-caption-heading">Picking the Right Tools: A Deep Dive Into the Most Popular Options for Mainframe DevOps</div>
-                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | February 17, 2021 YULIYA VARONINA</div>
+                                        <div class="blog-caption-heading">New GitHub Repository of Proven Mainframe Solutions (Part Two)</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | April 9, 2021 | ILYA ABNITSKI</div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-sm-6 mb-4">
                                 <div class="blog-item">
-                                    <a class="blog-link" href="https://ibagroupit.com/insights/db2-administration-how-to-break-cycle-of-constant-firefighting/">
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/github-repository-of-mainframe-solutions-part-one/">
+                                        <img class="img-fluid" src="assets/img/mainframe-siloes-2_1.png" alt="" />
+                                    </a>
+                                    <div class="blog-caption">
+                                        <div class="blog-caption-heading">Opening the Mainframe Siloes: Our New GitHub Repository of Proven Mainframe Solutions (Part One)</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | March 28, 2021 | YULIYA VARONINA</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-sm-6 mb-4">
+                                <div class="blog-item">
+                                    <a class="blog-link" href="https://ibagroupit.com/insights/db2-administration-part-two/">
                                         <img class="img-fluid" src="assets/img/mf-article-2.png" alt="" />
                                     </a>
                                     <div class="blog-caption">
-                                        <div class="blog-caption-heading">Db2 Administration: How to Break Your Cycle of Constant Firefighting and Embrace Proactive Management</div>
-                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | February 4, 2021 Valery Aranouski</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-4 col-sm-6 mb-4">
-                                <div class="blog-item">
-                                    <a class="blog-link" href="https://ibagroupit.com/insights/how-to-select-and-implement-the-right-tools-for-mainframe-devops-transformation/?doing_wp_cron=1611218172.4467830657958984375000">
-                                        <img class="img-fluid" src="assets/img/right-mf-tools.png" alt="" />
-                                    </a>
-                                    <div class="blog-caption">
-                                        <div class="blog-caption-heading">How to Select and Implement the Right Tools for Mainframe DevOps Transformation</div>
-                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | January 16, 2021 YULIYA VARONINA</div>
+                                        <div class="blog-caption-heading">Db2 Administration: How to Break Your Cycle of Constant Firefighting and Embrace Proactive Management. Part 2</div>
+                                        <div class="blog-caption-subheading text-muted">IBA Group Insights | March 19, 2021 | Valery Aranouski</div>
                                     </div>
                                 </div>
                             </div>
