--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </header>
 
         <!-- Icons section-->
-    <a href="https://event.ibagroupit.com/">
+    <a href="https://zoom.us/webinar/register/3816185570340/WN_1MRs2JWfQu6jjAZFF2tLjQ">
         <img src="assets/img/webinar.png" class="ibaevent" alt="" />
     </a>
 
@@ -244,6 +244,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </section>
 
+        <section id="widgets">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6 order-lg-2">
+                        <div class="p-5">
+                            <div class="img-fluid"  id="widgetcard"></div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6 order-lg-1">
+                        <div class="p-5">
+                            <h2 class="display-4">Handy mainframe with Intelij IDEA mainframe plugin</h2>
+                            <p>Our colleagues have developed a convenient plugin helping with the GRMD project. Using this plugin you can easily work with the z/OS, data, connections to different z/OS systems in a modern way.</p>
+                            <div id="widgetinstall"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- Contact Section-->
         <section class="page-section" id="blog">
@@ -331,6 +349,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <!-- Bootstrap core JS-->
+        <script src="https://plugins.jetbrains.com/assets/scripts/mp-widget.js"></script>
+        <script>
+             MarketplaceWidget.setupMarketplaceWidget('install', 16353, "#widgetinstall");
+        </script>
+                <script>
+             MarketplaceWidget.setupMarketplaceWidget('card', 16353, "#widgetcard");
+        </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Third party plugin JS-->
@@ -340,5 +365,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <script src="assets/mail/contact_me.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
     </body>
 </html>
