--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             </div>
         </section>
 
-        <section id="widgets">
+        <section class="page-section1" id="widgets">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6 order-lg-2">
@@ -254,7 +254,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="p-5">
-                            <h2 class="display-4">Handy mainframe with Intelij IDEA mainframe plugin</h2>
+                            <h2 class="display-5">Handy mainframe with Intelij IDEA mainframe plugin</h2>
                             <p>Our colleagues have developed a convenient plugin helping with the GRMD project. Using this plugin you can easily work with the z/OS, data, connections to different z/OS systems in a modern way.</p>
                             <div id="widgetinstall"></div>
                         </div>
